# gpuhost

./: .gitignore  README.md  pyproject.toml  test_fixes.py  test_v2.py
.github/workflows/: workflow.yml
gpuhost/: agent.py  api.py  clan.py  cli.py  gpu.py  job_manager.py  pyproject.toml  state.py  tunnel.py
gpuhost.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
gpuhost/client/: __init__.py  client.py
gpuhost/static/: index.html
